Refactoring sendbody
