# api/groups.js
@@ -3,8 +3,7 @@
 
 'use strict'
 
-var debug = require('debug')('imock:server:api:list')
-var trace = require('util')
+var debug = require('debug')('imock:server:api:groups')
 var express = require('express')
 var redis = require('redis')
 var util = require('../util')
@@ -12,18 +11,20 @@ var router = express.Router()
 
 // List of groups
 router.get('/', function (req, res, next) {
+    var locals = res.locals
     var client = req.app.locals.redis
 
     // Sort in ascending order
     client.sort('/api/groups', 'ALPHA', function (err, list) {
         if (err) {
-            util.sendBody(req, res, 500, 'ECHEC', 'List not found')
+            return next(util.getMessage(500, 'List not found'))
+        }
+        if (list.length > 0) {
+            locals.status = 200
+            locals.payload = JSON.stringify(list)
+            return next()
         } else {
-            if (list.length > 0) {
-                util.sendBody(req, res, 200, JSON.stringify(list))
-            } else {
-                util.sendBody(req, res, 404, 'ECHEC', 'Empty list')
-            }
+            return next(util.getMessage(404, 'Empty list'))
         }
     })
 })
